<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="36dp"
            android:background="@color/primary_navy"
            android:contentDescription="@string/detail_image_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/description"
            android:src="@drawable/back_rounded"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />


        <TextView
            android:id="@+id/product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_medium"
            android:maxLines="3"
            android:text="@string/product_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/price_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/price_product"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/product_title"
            app:layout_constraintStart_toStartOf="@+id/product_title"
            app:layout_constraintTop_toBottomOf="@+id/product_title" />

        <LinearLayout
            android:id="@+id/rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/price_tag"
            app:layout_constraintStart_toStartOf="@+id/price_tag"
            app:layout_constraintTop_toBottomOf="@+id/price_tag"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/icon_star"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/icon_rating"
                android:src="@drawable/star"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/product_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/rating"
                android:textSize="14sp"
                android:layout_marginEnd="250dp"/>

            <TextView
                android:id="@+id/product_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock"
                android:fontFamily="@font/roboto_regular"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/spesifikasi"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/rating"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/spesifikasi_name"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:text="@string/spesifikasi"
                android:fontFamily="@font/roboto_medium"
                android:textSize="18sp"
                android:layout_marginEnd="16dp"/>
            <ImageView
                android:id="@+id/icon_forward"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_arrow_forward_ios_24"
                android:contentDescription="@string/icon_forward"/>

        </LinearLayout>

        <TextView
            android:id="@+id/description_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/description"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/price_tag"
            app:layout_constraintStart_toStartOf="@+id/price_tag"
            app:layout_constraintTop_toBottomOf="@+id/spesifikasi" />

        <TextView
            android:id="@+id/description_product_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/description_product"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/description_product"
            app:layout_constraintStart_toStartOf="@+id/description_product"
            app:layout_constraintTop_toBottomOf="@+id/description_product"
            tools:ignore="VisualLintLongText" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>